# c_transaction

./: .gitmodules  CMakeLists.txt  README.md  README_cn.md  ccup.sh
cmake/: CPM.cmake
src/: Action.c  Action.h  ActionContext.h  Assert.h  AsynContext.c  AsynContext.h  AsynTrans.c  AsynTrans.h  AsynTransaction.c  AsynTransaction.h  BaseType.h  CMakeLists.txt  Context.c  Context.h  ExternC.h  Foreach.h  FwdDecl.h  List.c  List.h  MemGuard.c  MemGuard.h  MemGuardRollBack.c  MemGuardRollBack.h  MemHelp.c  MemHelp.h  MemManager.c  MemManager.h  RollbackContext.c  RollbackContext.h  SyncTrans.h  SyncTransaction.c  SyncTransaction.h  TcLog.h  Transaction.c  Transaction.h  Util.h
src/mem/: HeapMemAlgo.c  HeapMemAlgo.h  StaticMemAlgo.c  StaticMemAlgo.h
test/: AsynTransTest.cpp  CMakeLists.txt  ListTest.cpp  MemGuardTest.cpp  MemTest.cpp  SyncTransTest.cpp  TransactionTest.cpp  main.cpp  test1.cpp
